--- a/index.html
+++ b/index.html
@@ -1,10 +1,24 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<meta charset="utf-8">
-<title>Untitled Document</title>
-</head>
-
-<body>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>HTML 5 Boilerplate</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+	<h1>Assignment 2</h1>
+This webpage should include
+<ul>
+  <li>Book Fair Name</li>
+	  <li>Date</li>
+	  <li>Location</li>
+	  <li>Highlights</li>
+	  <li>Featured Books</li>
+	  <li>Pricelist</li>
+	  <li>Images and a video from previous year</li>
+  <li>Registration form</li></ul>
+  <script src="index.js"></script>
 </body>
 </html>
