--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <!-- ^ Date and Location -->
 <!-- v Highlights -->
       <img class="main" alt="Iqaluit library interior" src = "imgs/library-interior.JPG">
-      <p>Please accompany us for Iqaluit's annual book fair, hosted for your convenience at the Iqaluit Centennial Library. Join travelers from around the world and experience our incredible yearly event this March. Enjoy the city's many sights, beautiful weather and of course purchase a book or two!</p>
+      <p>Please join us for Iqaluit's annual book fair, hosted for your convenience at the Iqaluit Centennial Library. Join travelers from around the world and experience our incredible yearly event this March. Enjoy the city's many sights, beautiful weather and of course purchase a book or two!</p>
       <div class = "split">
           <div>
             <h1>Our City</h1>
@@ -64,19 +64,25 @@
 <h2 class="reg">Register Now!</h2>      
 <p>Though free to attend, registering will secure your place at our special events and earn you a 15% discount on books!</p>      
 <div class="split">
-	<div id="form">
-	<form>
 	<div>
-        <label for="name">Name<span class="required">*</span>:</label>
-        <input type="text" name="name" id="name" required="required">
+	<form id="form">
+	<table>
+<tr>
+	<div>
+        <td><label for="name">Name<span class="required">*</span>:</label></td>
+        <td><input type="text" name="name" id="name" required="required" width="30"></td>
     </div>
+</tr>
+<tr>
     <div>
-        <label for="email">Email<span class="required">*</span>:</label>
-        <input type="text" name="email" id="email" required="required">
+        <td><label for="email">Email<span class="required">*</span>:</label></td>
+        <td><input type="text" name="email" id="email" required="required" width="30"></td>
     </div>
+</tr>
+<tr>
     <div>
-        <label for="age">Age Range</label>
-        <select name="age" id="age">
+        <td><label for="age">Age Range:</label></td>
+        <td><select name="age" id="age">
             <option value="option-1" selected="true">0-12</option>
             <option value="option-2">13-18</option>
             <option value="option-3">19-25</option>
@@ -84,13 +90,49 @@
             <option value="option-5">35-49</option>
             <option value="option-6">50-79</option>
             <option value="option-7">80-100</option>
-        </select>
-    <!-- does need more options. Also a button -->
+        </select></td>
 	</div>
+</tr>
+<tr>
+	<div>
+        <td><label for="phone">Phone Number:</label></td>
+        <td><input type="text" name="email" id="email"></td>
+    </div>
+</tr>
+<tr>
+	<div>
+        <td><label for="interest">What are you looking forward to<span class="required">*</span>:</label></td>
+		<td><textarea type="textarea" name="interest" id="interest" rows="3" cols="21"></textarea></td>
+    </div>
+</tr>
+	</table>
+		<input type="submit" id="submit" value="Submit Form">	
 	</form>
 	</div>
 	<div id="map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1765.0400824189353!2d-68.51664568367174!3d63.743778256559835!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4dd3163321b121f9%3A0x2ebebb40eebf719f!2sIqaluit%20Centennial%20Library!5e0!3m2!1sen!2sca!4v1678198615856!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
 </div>
   <script src="index.js"></script>
+  <script>
+   	const form = document.querySelector("#form")
+   	const submitButton = document.querySelector("#submit")
+	const scriptURL = 'https://script.google.com/macros/s/AKfycbyFGESD3abtYkdJbEN8QI68LaplJeY57o4sz7_dYmqqVHiLVUuyDSJRpL6-gu6ufRS8TQ/exec'
+
+   	form.addEventListener('submit', e => {
+     submitButton.disabled = true
+     e.preventDefault()
+     let requestBody = new FormData(form)
+     fetch(scriptURL, { method: 'POST', body: requestBody})
+       .then(response => {
+          alert('Success!', response)
+          submitButton.disabled = false
+         })
+       .catch(error => {
+       alert('Error!', error.message)
+         submitButton.disabled = false
+
+       }
+       )
+   })
+</script>
 </body>
 </html>
